2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/system/sysmult.m: Use varargin instead of old style varargs.
	* control/system/sysadd.m: Likewise.
	* control/system/sysgroup.m: Likewise.
	* control/system/syssub.m: Likewise.
	* elfun/gcd.m: Likewise.
	* elfun/lcm.m: Likewise.
	* general/common_size.m: Likewise.
	* io/printf.m: Likewise.
	* miscellaneous/menu.m: Likewise.
	* miscellaneous/path.m: Likewise.
	* plot/__errplot__.m: Likewise.
	* plot/__plt__.m: Likewise.
	* plot/axis.m: Likewise.
	* plot/errorbar.m: Likewise.
	* plot/mplot.m: Likewise.
	* plot/loglog.m: Likewise.
	* plot/plot.m: Likewise.
	* plot/plot_border.m: Likewise.
	* plot/semilogx.m: Likewise.
	* plot/semilogy.m: Likewise.
	* plot/xlabel.m: Likewise.
	* plot/ylabel.m: Likewise.
	* plot/zlabel.m: Likewise.
	* statistics/base/ppplot.m: Likewise.
	* statistics/base/qqplot.m: Likewise.
	* statistics/tests/bartlett_test.m: Likewise.
	* statistics/tests/kolmogorov_smirnov_test.m: Likewise.
	* statistics/tests/kruskal_wallis_test.m: Likewise.
	* strings/str2mat.m: Likewise.
	* strings/strcat.m: Likewise.

2002-06-27  Paul Kienzle <pkienzle@jazz.ncnr.nist.gov>

	* statistics/distributions/gamma_pdf.m: Avoid overflow in more cases.

2002-05-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* skip-autoheader: New file, for autogen.sh.
	* Makefile.in (DISTFILES): Add it to the list.

2002-04-29  Paul Kienzle <pkienzle@users.sf.net>

	* general/repmat.m: New function.

2002-04-25  Paul Kienzle <pkienzle@users.sf.net>

	* audio/lin2mu.m: Accept matrices and [-1,1] normalized audio.
	Use optional parameter to specify the number of bits in the input.
	* audio/mu2lin.m: Accept matrices, return n-bit integers or 
	floats in the range [-1,1], 2x speedup.

	* strings/index.m, strings/rindex.m: Vectorize for speed.

2002-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/kron.m: Delete.

2002-04-24  Paul Kienzle <pkienzle@users.sf.net>
