@@ -1,5 +1,13 @@
 2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* general/mod.m: Additional error checks, Texinfoize doc string.
+
+2002-04-29  Paul Kienzle <pkienzle@users.sf.net>
+
+	* general/mod.m: New function.
+
+2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
 	* control/system/sysmult.m: Use varargin instead of old style varargs.
 	* control/system/sysadd.m: Likewise.
 	* control/system/sysgroup.m: Likewise.
